fix layout issues

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -361,7 +361,7 @@ nav {
 //
 
 .posts > .post {
-  padding-bottom: 2em;
+  padding-bottom: 1em;
   border-bottom: 1px solid $lightGray;
   text-align: left;
 }
